<resources>
    <string name="app_name">Girls\' Frontline toolset</string>
    <string name="line" translatable="false">Line</string>
    <string name="line_bot">Line bot</string>
    <string name="line_group">LINE Group (Chinese)</string>
    <string name="other">Other</string>
    <string name="shared">Share</string>
    <string name="version">Version</string>
    <string name="add_image">Add image</string>
    <string name="image">Illustration</string>
    <string name="tools">Tool</string>
    <string name="fb_like">Like Friend Area</string>
    <string name="fb_list">Recruitment Area</string>
    <string name="list">Recruitment Area</string>
    <string name="list_fairy">Fairy Index</string>
    <string name="time_list">T-Doll Index</string>
    <string name="i">Index</string>
    <string name="home">home</string>
    <string name="time">Time</string>
    <string name="time_girl">T-Doll Time</string>
    <string name="time_fairy">Fairy Time</string>
    <string name="time_device">Equipment Time</string>
    <string name="time_make">Simulated T-Doll production</string>
    <string name="time_make_device">Simulated Equipment production</string>
    <string name="time_hMake">Simulated Heavy T-Doll production</string>
    <string name="time_make_HDevice">Simulated Heavy Equipment production</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="updateLog">Update Log</string>
    <string name="navigation_drawer_open">Start</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="doc_list">Doc</string>
    <string name="schedule">Event Schedule (tw Ver)</string>
    <string name="setting">Setting</string>
    <string name="link">Link</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->

    <string name="ja">日本語</string>
    <string name="tw">繁體中文</string>
    <string name="zh">简体中文</string>
    <string name="success">Success</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="open_intelligence_task">Open intelligence task prompt</string>
    <string name="open_daily_task">Turn on daily task tips</string>
    <string name="open_friends_to_use">Turn on friends to use tips</string>
    <string name="open_dauly_likes_and_get_battery">Turn on daily likes and get battery tips</string>
    <string name="open_battery_to_get">Turn on the battery to get tips</string>
    <string name="open_event_task">Open the activity task prompt (Traditional Chinese version)</string>
    <string name="language">Language</string>
    <string name="make_wafer">Analog Combination - wafer test version</string>
    <string name="list_wafer">Wafer Index</string>
    <string name="list_support_unit">Support Unit Index</string>
    <string name="tool_so_appetizing">So appetizing generation</string>
    <string name="magical_tool">Magical tool</string>
    <string name="make">Production</string>
    <string name="information">Information</string>
    <string name="en" translatable="false">English</string>
    <string name="dailyNotificationTwVer">Daily Notification Tw Ver</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="logistics_support">logistics support calculators</string>

</resources>
