<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_top"
        android:title="@string/app_name">
    <menu>
        <item
            android:state_focused="false"
            android:id="@+id/nav_index"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_category_time"
        android:title="@string/time">

        <menu>
            <item
                android:id="@+id/nav_time_girl"
                android:title="@string/time_girl" />
            <item
                android:id="@+id/nav_time_device"
                android:title="@string/time_device" />
            <item
                android:id="@+id/nav_time_fairy"
                android:title="@string/time_fairy" />
            <item
                android:id="@+id/nav_time_make"
                android:title="@string/time_make" />
            <item
                android:id="@+id/nav_time_make_device"
                android:title="@string/time_make_device" />
            <item
                android:id="@+id/nav_time_hMake"
                android:title="@string/time_hMake" />
            <item
                android:id="@+id/nav_time_make_HDevice"
                android:title="@string/time_make_HDevice" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_category_list"
        android:title="@string/i">

        <menu>
            <item
                android:id="@+id/nav_time_list"
                android:title="@string/time_list" />
            <item
                android:id="@+id/nav_time_list_fairy"
                android:title="@string/list_fairy" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_category_list_fb"
        android:title="@string/list">

        <menu>
            <item
                android:id="@+id/nav_fb_list"
                android:title="@string/fb_list" />
            <item
                android:id="@+id/nav_time_like_list"
                android:title="@string/fb_like" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_category_tools"
        android:title="@string/tools">

        <menu>
            <item
                android:id="@+id/nav_image"
                android:title="@string/image" />
            <item
                android:id="@+id/nav_image_add"
                android:title="@string/add_image" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_category_line"
        android:title="@string/line">

        <menu>
            <item
                android:id="@+id/nav_bot_line"
                android:title="@string/line_bot" />
            <item
                android:id="@+id/nav_time_more_line"
                android:title="@string/line_group"/>
        </menu>
    </item>

    <item
        android:id="@+id/nav_other"
        android:title="@string/other">

        <menu>
            <item
                android:id="@+id/nav_shared"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shared" />
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/version" />
        </menu>
    </item>


</menu>
